--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             <div class="about_text">
                 <h3>
                     <p>Je suis Maurice AKEKO, un étudiant passionné par deux univers en apparence distincts, mais qui se complètent à merveille : le droit et le développement informatique.</p>
-                    <p>Actuellement en formation en droit (préciser le niveau : licence, master, etc.), je me spécialise dans [mentionner une branche du droit si applicable, ex. : droit des nouvelles technologies, droit numérique, droit des affaires]. Mon parcours juridique m'a permis d'acquérir une rigueur analytique, un esprit critique et une solide capacité de rédaction.</p>
-                    <p>Parallèlement, je me forme au développement informatique (préciser les langages ou domaines : Python, JavaScript, développement web, etc.), avec un intérêt particulier pour les intersections entre le droit et la tech. Que ce soit la protection des données (RGPD), la cybersécurité ou les contrats intelligents (smart contracts), je cherche à concilier ces deux disciplines pour innover dans le domaine de la legal tech.</p>
+                    <p>Actuellement en formation en licence 3 de droit public, je me spécialise dans le droit des nouvelles technologies, droit numérique, et en droit international. Mon parcours juridique m'a permis d'acquérir une rigueur analytique, un esprit critique et une solide capacité de rédaction.</p>
+                    <p>Parallèlement, je me forme au développement informatique (préciser les langages ou domaines : Python, JavaScript, HTML, CSS, REACT/JS, GIT/GITHUB), avec un intérêt particulier pour les intersections entre le droit et la tech. Que ce soit la protection des données (RGPD), la cybersécurité ou les contrats intelligents (smart contracts), je cherche à concilier ces deux disciplines pour innover dans le domaine de la legal tech.</p>
                 </h3>
             </div>
         </div>
