--- a/index.html
+++ b/index.html
@@ -147,6 +147,14 @@
                 <a href="https://resto-ivoire.vercel.app/" class="work_link"> <button class="work_bt">  site web </button> </a>
             </div>
 
+             <div class="work_element" id="work_foot">
+                <div class="work_img">
+                    <img class="img_work" src="./img/profil3.png" alt="site">
+                </div>
+
+                <a href="https://lawer-web.vercel.app/" class="work_link"> <button class="work_bt">  site web </button> </a>
+            </div>
+
              <div class="work_element" id="work_law">
                 <div class="work_img">
                     <img class="img_work" src="./img/picture.jpg" alt="site">
